Remove the PDF Downloader

--- a/myrecipe/public/index.html
+++ b/myrecipe/public/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
   
 
-  <title>My Recipe</title>
+  <title>My Recipe - Mark Lester Moreno</title>
 </head>
 
 <body>
